# nexusx

./: 404.html  CHANGELOG.md  CLAUDE.md  README.md  how_it_works.md  index.html  llms-full.txt  mkdocs.yml  pyproject.toml  sitemap.xml  start_all.sh
.github/workflows/: ci.yml  gh-pages.yml  (+1 more)
benchmarks/: bench_resolver.py
clean-architecture-comparison/: index.html
demo/: __init__.py
docs/: clean-architecture-comparison.md  index.md  index.zh.md
overrides/: home.html
skill/: SKILL.md  skill.md
skill/template/: pyproject.toml
skill/template/src/: database.py  db.py  main.py  models.py
skill/template/src/router/: api.py
skill/template/src/service/sprint/: dtos.py  methods.py  service.py  spec.md
skill/template/src/service/task/: dtos.py  methods.py  service.py  spec.md
skill/template/src/service/user/: methods.py  spec.md
stylesheets/: extra.css
tests/: test_argument_types.py  test_autoload.py  test_cli.py  test_context.py  test_decorator.py  test_demo_final.py  test_demo_standard_queries.py  test_er_diagram.py  test_field_tree_builder.py  test_fixes.py  test_handler.py  test_input_types.py  test_introspection.py  test_loader_factories.py  test_loader_registry.py  test_mcp.py  test_mcp_schema_enhanced.py  test_query_executor.py  test_query_meta.py  test_query_parser.py  test_relationship.py  test_resolver.py  test_response_builder.py  test_sdl_generator.py  test_standard_queries.py  test_subset.py  test_type_converter.py  test_type_tracer.py  test_type_utils.py  test_use_case.py  test_use_case_router.py  test_voyager_selfref.py
zh/: index.html
(+186 files in other folders)
